--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
 asgiref==3.3.4
 boto3==1.17.69
 botocore==1.20.69
+certifi==2020.12.5
 cffi==1.14.5
+chardet==4.0.0
+cloudinary==1.25.0
 cryptography==3.4.7
+dj-database-url==0.5.0
 Django==3.2.2
+django-cloudinary-storage==0.3.0
 django-filter==2.4.0
 django-rest-knox==4.1.0
 django-storages==1.11.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
+idna==2.10
 jmespath==0.10.0
 Pillow==8.2.0
+psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
 pytz==2021.1
+requests==2.25.1
 s3transfer==0.4.2
 six==1.16.0
 sqlparse==0.4.1
